# HeyGemma

./: .gitignore  .gitmodules  README.md  backlog.md  gradle.properties  settings.gradle.kts  setup.sh
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/res/drawable/: bg_agent_note.xml  bg_bottom_fade.xml  bg_bubble_incoming_new.xml  bg_bubble_model.xml  bg_bubble_outgoing_gemma.xml  bg_bubble_user.xml  bg_circle_surface2.xml  bg_composer_input.xml  bg_filter_btn_active_all.xml  bg_filter_btn_active_emergency.xml  bg_filter_btn_active_important.xml  bg_filter_btn_inactive.xml  bg_gemma_badge.xml  bg_gemma_strip.xml  bg_lime_btn.xml  bg_nav_bar_pill.xml  bg_process_step_active.xml  bg_process_step_done.xml  bg_process_step_pending.xml  bg_rose_pill.xml  bg_rose_pill_full.xml  bg_surface_border_14.xml  bg_todo_card_fresh.xml  bg_unread_badge.xml  bg_urgency_amber.xml  bg_urgency_green.xml  bg_wake_pill.xml  ic_check.xml  ic_chevron.xml  ic_close.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_mic.xml  ic_phone.xml  ic_plus.xml  ic_search.xml  ic_settings.xml  ic_sparkle.xml  ic_telegram.xml  ic_volume_off.xml  (+1 more)
app/src/main/res/layout/: activity_elevenlabs.xml  activity_main.xml  activity_model_picker.xml  activity_telegram.xml  activity_telegram_chat.xml  activity_telegram_chats.xml  activity_telegram_settings.xml  activity_todos.xml  activity_user_profile.xml  item_agent_note.xml  item_contact_picker.xml  item_message_incoming.xml  item_message_model.xml  item_message_outgoing.xml  item_message_user.xml  item_telegram_chat_preview.xml  item_telegram_contact.xml  (+6 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+51 files in other folders)
